feat: add installation scripts for pelicanctl on Windows and Linux
- Introduced `install.bat` for Windows CMD users to facilitate installation via PowerShell.
- Added `install.ps1` for Windows PowerShell, providing a comprehensive installation process with version and architecture detection.
- Created `install.sh` for Linux users, supporting installation with checksum verification and environment setup.
- Updated GitHub Actions workflow to include repository owner in the goreleaser step.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           app-id: ${{ secrets.LC_RELEASER_APP_ID }}
           private-key: ${{ secrets.LC_RELEASER_APP_KEY }}
+          owner: ${{ github.repository_owner }}
 
       - name: Run goreleaser
         uses: goreleaser/goreleaser-action@v6
