feat(admin): enhance node and server management commands
- Added `create`, `update`, and `delete` commands for managing nodes and servers, allowing JSON data input via `--data` flag or stdin.
- Implemented error handling and success messages for node and server operations.
- Updated OpenAPI specifications to include new backup management features and refined existing command structures.
- Introduced new request models for backup operations, enhancing API capabilities.

This update improves the usability and functionality of the admin commands in the pelicanctl application.

Signed-off-by: Sean Latimer <sean@latimer.rocks>

--- a/openapi/application-overlay.yaml
+++ b/openapi/application-overlay.yaml
@@ -151,3 +151,18 @@ actions:
   - target: $["components"]["schemas"]["UpdateServerDetailsRequest"]["properties"]["description"]
     update:
       "nullable": true
+  - target: $["components"]["schemas"]["StoreBackupRequest"]["properties"]["name"]["type"]
+    update: "string"
+  - target: $["components"]["schemas"]["StoreBackupRequest"]["properties"]["name"]
+    update:
+      "nullable": true
+  - target: $["components"]["schemas"]["StoreBackupRequest"]["properties"]["is_locked"]["type"]
+    update: "boolean"
+  - target: $["components"]["schemas"]["StoreBackupRequest"]["properties"]["is_locked"]
+    update:
+      "nullable": true
+  - target: $["components"]["schemas"]["StoreBackupRequest"]["properties"]["ignored"]["type"]
+    update: "string"
+  - target: $["components"]["schemas"]["StoreBackupRequest"]["properties"]["ignored"]
+    update:
+      "nullable": true
