--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -23,7 +23,7 @@ builds:
       - amd64
       - arm64
     ldflags:
-      - -X go.lostcrafters.com/pelicanctl/cmd/pelicanctl.Version={{.Version}}
+      - -s -w -X "go.lostcrafters.com/pelicanctl/cmd/pelicanctl.Version={{.Version}}"
 
 archives:
   - id: default
