feat: enhance JSON output for command and backup operations
- Introduced structured JSON output for command execution results and backup creation results, improving clarity and usability.
- Added support for an `override` flag in backup creation commands, allowing users to overwrite existing backups.
- Updated OpenAPI specifications to reflect changes in request and response structures, including new properties for backup requests.
- Refactored status handling in command results to use constants for success and error states.

This update significantly enhances the user experience and API consistency in the pelicanctl application.

--- a/openapi/application-overlay.yaml
+++ b/openapi/application-overlay.yaml
@@ -166,3 +166,8 @@ actions:
   - target: $["components"]["schemas"]["StoreBackupRequest"]["properties"]["ignored"]
     update:
       "nullable": true
+  - target: $["components"]["schemas"]["StoreBackupRequest"]["properties"]["override"]["type"]
+    update: "boolean"
+  - target: $["components"]["schemas"]["StoreBackupRequest"]["properties"]["override"]
+    update:
+      "nullable": true
